update style for stars under lanaguages section to always be on the same line

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -460,6 +460,9 @@ iframe {
 .languages .item .fa {
   color: #79d19a;
 }
+.languages .stars {
+  overflow: hidden; white-space: nowrap;
+}
 /* Blog Section */
 .blog .item {
   margin-bottom: 30px;
