--- a/public/css/style.css
+++ b/public/css/style.css
@@ -329,6 +329,15 @@ iframe {
   font-weight: normal;
 }
 /* Git section */
+.github-container {
+  display: inline-block;
+  position: relative;
+  width: 100%;
+  padding-bottom: 30px; 
+  vertical-align: middle; 
+  overflow: scroll; 
+}
+
 .github-graph {
   margin-bottom: 30px;
 }
