--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,11 +1,3 @@
-/*
- * Template Name: Developer - Responsive Website Template for Developers
- * Version: 1.5
- * Author: Xiaoying Riley
- * Twitter: @3rdwave_themes
- * License: Creative Commons Attribution 3.0 License
- * Website: http://themes.3rdwavemedia.com/
-*/
 /* ======= Base ======= */
 body {
   font-family: 'Lato', arial, sans-serif;
@@ -15,12 +7,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+h1, h2, h3, h4, h5, h6 {
   font-family: 'Montserrat', sans-serif;
   font-weight: 700;
   color: #778492;
@@ -40,8 +27,7 @@ a:hover {
 a:focus {
   text-decoration: none;
 }
-.btn,
-a.btn {
+.btn, a.btn {
   -webkit-transition: all 0.4s ease-in-out;
   -moz-transition: all 0.4s ease-in-out;
   -ms-transition: all 0.4s ease-in-out;
@@ -50,38 +36,32 @@ a.btn {
   padding: 8px 16px;
   font-weight: bold;
 }
-.btn .fa,
-a.btn .fa {
+.btn .fa, a.btn .fa {
   margin-right: 5px;
 }
-.btn:focus,
-a.btn:focus {
+.btn:focus, a.btn:focus {
   color: #fff;
 }
-a.btn-cta-primary,
-.btn-cta-primary {
+a.btn-cta-primary, .btn-cta-primary {
   background: #54ba4e;
   border: 1px solid #54ba4e;
   color: #fff;
   font-weight: 600;
   text-transform: uppercase;
 }
-a.btn-cta-primary:hover,
-.btn-cta-primary:hover {
+a.btn-cta-primary:hover, .btn-cta-primary:hover {
   background: #49ac43;
   border: 1px solid #49ac43;
   color: #fff;
 }
-a.btn-cta-secondary,
-.btn-cta-secondary {
+a.btn-cta-secondary, .btn-cta-secondary {
   background: #479FC8;
   border: 1px solid #479FC8;
   color: #fff;
   font-weight: 600;
   text-transform: uppercase;
 }
-a.btn-cta-secondary:hover,
-.btn-cta-secondary:hover {
+a.btn-cta-secondary:hover, .btn-cta-secondary:hover {
   background: #3893bd;
   border: 1px solid #3893bd;
   color: #fff;
@@ -101,18 +81,7 @@ a.dotted-link:hover {
   text-decoration: none;
   color: #49515a;
 }
-/*
-iframe {
 
-    .header {
-        padding: 0;
-    }
-}
-
-.iframe-wrapper {
-    overflow: auto;
-    -webkit-overflow-scrolling:touch;
-}
 */
 /* ======= Header ======= */
 .header {
@@ -254,7 +223,6 @@ iframe {
   display: none !important;
 }
 
-
 .latest .featured-image .ribbon .text {
   font-family: 'Montserrat', sans-serif;
   position: relative;
@@ -347,10 +315,7 @@ iframe {
 .ghfeed {
   height: 600px;
 }
-.ghfeed,
-.ghfeed *,
-.ghfeed *:before,
-.ghfeed *:after {
+.ghfeed, .ghfeed *, .ghfeed *:before, .ghfeed *:after {
   -webkit-box-sizing: content-box;
   -moz-box-sizing: content-box;
   box-sizing: content-box;
