--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,6 +6,7 @@ body {
   font-size: 16px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  margin: 2em 0 0 0;
 }
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Montserrat', sans-serif;
@@ -96,7 +97,8 @@ a.dotted-link:hover {
 .header .profile-image {
   display: block;
   width: 150px;
-  border-radius: 50%;
+  /*border-radius: 50%;*/
+  border-radius: 45%;
   margin-right: 30px;
 }
 .header .profile-content .name {
